# geneanot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: basic_actions.yml
Reports/: mRNA_table.csv  mRNA_table.html  mRNA_table.xlsx  transcript_table.csv  transcript_table.html  transcript_table.xlsx
Scripts/: usage_examples.ipynb
src/geneanot/: Fasta_segment.py  Gene_annotation.py  __init__.py  annotation_file_utils.py  ensembl_gene_annotations_utils.py  ensembl_rest_utils.py  ensembl_utils.py  excel_utils.py  genomic_sequences_utils.py  rest_api_utils.py  translation.py
tests/: test_main.py
